Update index.html and index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <div id="app"></div>
-    <p>あいうえおかきくけこ</p>
+    <p>あいうえおかきくけこたちつてと</p>
 
     <script src="src/index.js"></script>
   </body>
