--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <div id="app"></div>
-    <p>あいうえくけこたちつてと</p>
+    <p>あいうえくけこたちつてとなにぬね</p>
 
     <script src="src/index.js"></script>
   </body>
